--- a/MVC_CRUD.csproj
+++ b/MVC_CRUD.csproj
@@ -1,23 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
+
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
-	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  </PackageReference>
-	  <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
-	  <PackageReference Include="MySql.Data" Version="9.0.0" />
-	  <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.5" />
-	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.4" />
+		<!-- Entity Framework Core packages -->
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+
+		<!-- MySQL packages -->
+		<PackageReference Include="MySql.Data" Version="9.1.0" />
+		<!-- Updated to version 9.1.0 -->
+		<PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.0-preview" />
+		<!-- Keep this version as it is -->
+
+		<!-- Swagger/OpenAPI for API Documentation -->
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Folder Include="Migrations\" />
 	</ItemGroup>
-	
+
 </Project>
